
DescTools 0.99.39 (2020-11-06)
------------------------------

NEW FUNCTIONS ADDED:
  * GetCalls() return the function calls of a given function.

UPDATED FUNCTIONS:
  * MultMerge() offers an option to define a merging column.
  * TextToTable() gets a new argument "check.names".
  * Quantile returns a named result.
  
BUGFIXES:
  * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)



DescTools 0.99.38 (2020-09-06)
------------------------------

NEW FUNCTIONS ADDED:
  * ORToRelRisk.glm() converts odds ratios from a logistic regression
    to relative risks.
  * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
    scale).  
  * MADCI() calculates confidence intervals for the median absolute deviation(s).
  * QuantileCI() yields confidence intervals for any quantile.
  * BinomCIn() returns the sample size which is necessary to obtain a confidence
    interval with a given with, at a specified p and confidence level.

UPDATED FUNCTIONS:
  * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
    can now be coded with the number of leading zeros instead of using
    character coding like "000".
  * BinomDiffCI() gets two further methods "haldane" and "jeffery perks". 
  * XLView() gets a new argument "sep" (implementing a request of Mahboob).
  * CutQ() accepts integer number for breaks.
  * ColorLegend() gets the option to add a title and silently returns the geometry 
    in the similar way to legend().

  
BUGFIXES:
  * Bug in BinomDiffCI() for methods score and scorecc have been corrected.
    (Credits to Meredith Peratikos)




DescTools 0.99.37 (2020-07-09)
------------------------------

NEW FUNCTIONS ADDED:
  * PlotConDens() plots conditional densities using a grouping variable.
  * StrSplit() is a convenience function with more defaults than strsplit.
  * SplitToCol() splits columns of a data.frame using a split.
  * WrdDeleteBookmark() extends the suite of WrdBookmark functions.