@@ -1,47 +1,38 @@
 \name{Outlier}
 \alias{Outlier}
-%- Also NEED an '\alias' for EACH other topic documented here.
-\title{Outlier
-%%  ~~function to do ... ~~
-}
-\description{Return outliers following Tukey's boxplot definition.
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
-}
+\title{Outlier}
+
+\description{Return outliers following Tukey's boxplot and Hampel's median/mad definition.}
+
+
 \usage{
-Outlier(x, method = c("boxplot"), value = TRUE,na.rm = FALSE)
+Outlier(x, method = c("boxplot", "hampel"), value = TRUE,na.rm = FALSE)
 }
-%- maybe also 'usage' for other objects documented here.
+
 \arguments{
   \item{x}{a (non-empty) numeric vector of data values.
 }
-  \item{method}{the method to be used. So far only Tukey's boxplot rule is implemented.
-%%     ~~Describe \code{method} here~~
-}
+  \item{method}{the method to be used. So far Tukey's boxplot and Hampel's rule are implemented.}
+  
   \item{value}{logical. If \code{FALSE}, a vector containing the (integer) indices of the outliers is returned, and if \code{TRUE} (default), a vector containing the matching elements themselves is returned.}
 
   \item{na.rm}{logical. Should missing values be removed? Defaults to \code{FALSE}.
 }
 }
-\details{Outlier detection is a tricky problem and should be handled with care. We implement only Tukey's boxplot rule as a rough idea of spotting extreme values.
 
-%%  ~~ If necessary, more details than the description above ~~
-}
-\value{the values of x lying outside the whiskers in a boxplot or the indices of them
-%%  ~Describe the value returned
-%%  If it is a LIST, use
-%%  \item{comp1 }{Description of 'comp1'}
-%%  \item{comp2 }{Description of 'comp2'}
-%% ...
-}
-\author{Andri Signorell <andri@signorell.net>
-%%  ~~who you are~~
-}
+\details{Outlier detection is a tricky problem and should be handled with care. We implement Tukey's boxplot rule as a rough idea of spotting extreme values.
 
-%% ~Make other sections like Warning with \section{Warning }{....} ~
+Hampel considers values outside of median +/- 3 * (median absolute deviation) to be outliers.}
 
-\seealso{\code{\link{boxplot}}
-%% ~~objects to See Also as \code{\link{help}}, ~~~
-}
+\value{the values of x lying outside the whiskers in a boxplot \cr
+or the indices of them }
+
+\author{Andri Signorell <andri@signorell.net>}
+
+\references{Hampel F. R. (1974) The influence curve and its role in robust estimation, \emph{Journal of the American Statistical Association}, 69, 382-393}
+
+\seealso{\code{\link{boxplot}} }
+
 \examples{
 Outlier(d.pizza$temperature, na.rm=TRUE)
 
@@ -53,6 +44,9 @@ sort(b$out)
 # nice to find the corresponding rows
 d.pizza[Outlier(d.pizza$temperature, value=FALSE, na.rm=TRUE), ]
 
+# compare to Hampel's rule
+Outlier(d.pizza$temperature, method="hampel", na.rm=TRUE)
+
 
 # outliers for the each driver
 tapply(d.pizza$temperature, d.pizza$driver, Outlier, na.rm=TRUE)
@@ -60,6 +54,5 @@ tapply(d.pizza$temperature, d.pizza$driver, Outlier, na.rm=TRUE)
 # the same as:
 boxplot(temperature ~ driver, d.pizza)$out
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
+
 \keyword{ univar }
