@@ -3,15 +3,17 @@ DescTools 0.99.39 (2020-11-06)
 ------------------------------
 
 NEW FUNCTIONS ADDED:
-  * GetCalls() return the function calls of a given function.
+  * GetCalls() return the function calls used within a given function.
 
 UPDATED FUNCTIONS:
   * MultMerge() offers an option to define a merging column.
   * TextToTable() gets a new argument "check.names".
   * Quantile returns a named result.
+  * Outlier() gets a new option "hampel".
   
 BUGFIXES:
   * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)
+  * plot.Desc.numnum() will respect given xlab/ylab now.
 
 
 
